test/units/ParseSpec/valid/expr/rec-2-standalone.algst
-- Imagine   type PairId a b = (a, b) -> (a, b)
rec id : ∀(a:TL) (b:TL). PairId a b = \[a:TL] [b:TL] (p:(a,b)) -> p
