test/units/ParseSpec/invalid/expr/rec-no-term.algst
rec go : ∀(a:TU). Int = \[a:TU] -> 5
